[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/TaskBarBG.png" type="Texture" id=1]
[ext_resource path="res://hud/BuildMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Menu Icons/Icon_Mine_Focus.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu Icons/Icon_Mine_Normal.png" type="Texture" id=4]
[ext_resource path="res://assets/Menu Icons/Icon_Barricade_Focus.png" type="Texture" id=5]
[ext_resource path="res://assets/Menu Icons/Icon_Barricade_Normal.png" type="Texture" id=6]
[ext_resource path="res://assets/Menu Icons/Icon_Turret_Focus.png" type="Texture" id=7]
[ext_resource path="res://assets/Menu Icons/Icon_Turret_Normal.png" type="Texture" id=8]
[ext_resource path="res://assets/Menu Icons/Icon_Laser_Normal.png" type="Texture" id=9]
[ext_resource path="res://assets/Menu Icons/Icon_Laser_Focus.png" type="Texture" id=10]
[ext_resource path="res://fonts/6px_8.tres" type="DynamicFont" id=11]

[node name="BuildMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -36.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 11.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrapsLabel" type="Label" parent="TextureRect/HBoxContainer"]
margin_left = 9.0
margin_top = 1.0
margin_right = 15.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 11 )
text = "$:"
valign = 1

[node name="MineButton" type="TextureButton" parent="TextureRect/HBoxContainer"]
margin_left = 19.0
margin_right = 29.0
margin_bottom = 10.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )

[node name="BarricadeButton" type="TextureButton" parent="TextureRect/HBoxContainer"]
margin_left = 33.0
margin_right = 43.0
margin_bottom = 10.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="TurretButton" type="TextureButton" parent="TextureRect/HBoxContainer"]
margin_left = 47.0
margin_right = 57.0
margin_bottom = 10.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 7 )

[node name="LaserButton" type="TextureButton" parent="TextureRect/HBoxContainer"]
margin_left = 61.0
margin_right = 71.0
margin_bottom = 10.0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 10 )

[connection signal="pressed" from="TextureRect/HBoxContainer/MineButton" to="." method="_on_MineButton_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/BarricadeButton" to="." method="_on_BarricadeButton_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/TurretButton" to="." method="_on_TurretButton_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/LaserButton" to="." method="_on_LaserButton_pressed"]
